--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         }).addTo(map);
 
         // Adding the vehicle data to the map
-        url = "http://localhost:8080/getVehicles"
+        url = "http://localhost:8080/getVehicles?route=020"
         bus_data = fetch(url, {
             method: "GET" // default, so we can ignore
         })
