fixup: localhost -> server

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
 <body>
     <div id="map"></div>
     <script>
-        api = "http://localhost:8080"
-        //api = "https://westcoastbrie.com/bus-tracker/api"
+        //api = "http://localhost:8080"
+        api = "https://westcoastbrie.com/bus-tracker/api"
         default_route_selected = '020';
 
         var map = L.map('map').setView([49.254137, -123.114853], 12);
