--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,8 @@
                 html: `
                     <img src="static/bus-icon_border.svg" class="bus-icon-border" style="rotate: ${rotation}"/>
                     <img src="static/bus-icon_bus.svg" class="bus-icon-bus" />`,
-                className: ''
+                className: '',
+                iconSize: [32, 32]
             });
         }
 
